Changes :  Listbox Header Alignment Issue.

--- a/src/styles/default/common.scss
+++ b/src/styles/default/common.scss
@@ -77,6 +77,7 @@ body {
 
 .header .title {
   float: left;
+  font-size:20px;
 }
 
 /**HEADER STYLE ENDS **/
@@ -96,6 +97,7 @@ body {
 .table .tablerow .tablecol{
   display: table-cell;
   padding-right: 5px;
+  vertical-align: middle;
 }
 
 
